trunk/Archive2/2e/a46e0afd894d3d/output
main.cpp: In instantiation of 'void merge_sort(std::vector<_RealType>&) [with T = type]':
main.cpp:46:17:   required from here
main.cpp:31:5: error: static assertion failed: Element type is not sortable
     static_assert( concept::is_ord<T>(), "Element type is not sortable" );
     ^
